// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen appPrototypes config import-export] should create the appPrototypes: the appPrototypes have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ appprototype [cfgObjectTest]
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen appPrototypes config import-export] should skip the same appPrototypes: the appPrototypes have not been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= appprototype [cfgObjectTest]
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen appPrototypes config import-export] should throw exception when new appPrototypes to import miss mandatory properties appPrototypes: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - appprototype [cfgObjectTest]:
    - type
    - version
",
  "stdout": "",
}
`;

exports[`[mutagen appPrototypes config import-export] should throw exception when updating appPrototypes with different values for unchangeable properties: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Unchangeable properties:
  - appprototype [cfgObjectTest]:
    - type
    - version
",
  "stdout": "",
}
`;

exports[`[mutagen appPrototypes config import-export] should update the modified appPrototypes: the modified appPrototypes have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ appprototype [cfgObjectTest]
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
